3-Nine.Shared.UI/Components/Layout/SharedMainLayout.razor.css
.page {
  position: relative;
  display: flex;
  flex-direction: column;
}

main {
  flex: 1;
  min-height: 100vh;
}

article.content {
  background-color: var(--bs-body-bg) !important;
  color: var(--bs-body-color) !important;
}

.sidebar {
  background-color: var(--bs-tertiary-bg);
}

.top-row {
  background-color: var(--bs-body-bg) !important;
  border-bottom: 1px solid var(--bs-border-color) !important;
  justify-content: flex-end;
  height: 3.5rem;
  display: flex;
  align-items: center;
}

.top-row ::deep a,
.top-row ::deep .btn-link {
  white-space: nowrap;
  margin-left: 1.5rem;
  text-decoration: none;
  color: var(--bs-body-color) !important;
}

.top-row ::deep a:hover,
.top-row ::deep .btn-link:hover {
  text-decoration: underline;
}

.top-row ::deep a:first-child {
  overflow: hidden;
  text-overflow: ellipsis;
}

@media (max-width: 640.98px) {
  .top-row {
    justify-content: space-between;
  }

  .top-row ::deep a,
  .top-row ::deep .btn-link {
    margin-left: 0;
  }
}

@media (min-width: 641px) {
  .page {
    flex-direction: row;
  }

  .sidebar {
    width: 250px;
    height: 100vh;
    position: sticky;
    top: 0;
  }

  .top-row {
    position: sticky;
    top: 0;
    z-index: 1;
  }

  .top-row.auth ::deep a:first-child {
    flex: 1;
    text-align: right;
    width: 0;
  }

  .top-row,
  article {
    padding-left: 2rem !important;
    padding-right: 1.5rem !important;
  }
}

#blazor-error-ui {
  color-scheme: light only;
  background: lightyellow;
  bottom: 0;
  box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
  box-sizing: border-box;
  display: none;
  left: 0;
  padding: 0.6rem 1.25rem 0.7rem 1.25rem;
  position: fixed;
  width: 100%;
  z-index: 1000;
}

#blazor-error-ui .dismiss {
  cursor: pointer;
  position: absolute;
  right: 0.75rem;
  top: 0.5rem;
}

